<resources>
    <string name="app_name">RecipesApp</string>

    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="basket">Basket</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="sign_up_successfufly">Account created successfully!</string>
    <string name="sign_in_successfufly">Logged in successfully!</string>
    <string name="email_is_empty">E-mail is empty!</string>
    <string name="password_is_empty">Password is empty!</string>
    <string name="different_passwords">Passwords are different!</string>
    <string name="logout_successfully">Logged out successfully</string>
    <string name="logout_not_successfully">Logged out is not successfully</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="name_too_short">The name must contain at least 6 characters!</string>
    <string name="empty_ingredients">The ingredients section cannot contain an empty element!</string>
    <string name="empty_preparation">The preparation section cannot contain an empty element!</string>
    <string name="empty_ingredients_list">The ingredients list cannot be empty!</string>
    <string name="empty_preparation_list">The preparation list cannot be empty!</string>
    <string name="empty_ingredient_name">The ingredient name cannot be empty!</string>
    <string name="empty_ingredient_count">The ingredient amount cannot be empty!</string>
    <string name="copied">Copied to clipboard!</string>

    <string name="ingredients_info">Hold an ingredient to select. You can add selected ingredients to the basket.</string>
    <string name="author_info">Author of recipe</string>
    <string name="rating_info">Rating of recipe</string>
    <string name="level_info">Level of difficulty</string>
    <string name="time_info">Time of preparation</string>
    <string name="meals_info">Count of meals</string>
    <string name="select_level_desc">Select difficulty level</string>
    <string name="select_time_desc">Select preparation time</string>
    <string name="select_meals_desc">Select meals count</string>

    <string name="todays_recipe">Today\'s recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="my_recipes">My recipes</string>
    <string name="most_popular">Most popular</string>
    <string name="add_recipe">Add recipe</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="pick_image">Pick image</string>
    <string name="reset_image">Reset image</string>
    <string name="name_desc">Enter a name for the recipe</string>
    <string name="select_level">Select level</string>
    <string name="select_time">Select time</string>
    <string name="select_meals">Select count</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="edit">Edit</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="public_recipe">Public</string>
    <string name="save">Save</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="advanced_search">Advanced</string>
    <string name="new_ingredient">Add new ingredient</string>
    <string name="edit_ingredient">Edit this ingredient</string>
    <string name="new_ingredient_name">Enter a name for the ingredient</string>
    <string name="new_ingredient_amount">Enter the amount</string>
    <string name="new_ingredient_unit">Select unit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="gram">gram</string>
    <string name="g">g</string>
    <string name="millilitre">millilitre</string>
    <string name="ml">ml</string>
    <string name="piece">piece</string>
    <string name="pc">pc</string>

</resources>