<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/home" />
    <item
        android:id="@+id/recipes"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/recipes" />
    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/favourites" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/account" />
    <item
        android:id="@+id/basket"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/basket" />
</menu>