<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment">

    <include
        android:id="@+id/include2"
        layout="@layout/background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/dark"
        android:layout_marginBottom="@dimen/field_v_margin"
        app:layout_constraintBottom_toTopOf="@+id/email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/field_v_margin"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/TextInputStyle"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/TextInputStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/field_v_margin"
        android:hint="@string/repeat_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password"
            style="@style/TextInputStyle"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/field_v_margin"
        android:text="@string/sign_up"
        android:backgroundTint="@color/white"
        android:textColor="@color/dark"
        app:rippleColor="@color/medium"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>